Trivial NER annotation jobs list service.